--- a/package.json
+++ b/package.json
@@ -7,17 +7,34 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+	    "deploy": "vite build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.2",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@tailwindcss/typography": "^0.5.13",
+		"autoprefixer": "^10.4.19",
+		"gh-pages": "^6.1.1",
+		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
+		"svelte-carousel": "^1.0.25",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.4",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bits-ui": "^0.21.12",
+		"clsx": "^2.1.1",
+		"embla-carousel-svelte": "^8.1.6",
+		"lucide-svelte": "^0.407.0",
+		"svelte-routing": "^2.13.0",
+		"tailwind-merge": "^2.4.0",
+		"tailwind-variants": "^0.2.1"
+	}
 }
